delete magic numbers rename p to person